# Relay

./: .gitignore  API_SPEC.md  BUILD_PLAN.md  CLAUDE.md  Claude.md  README.md  SCOPE.md  TECHNICAL_DESIGN.md
backend/: .dockerignore  .env.example  Caddyfile  Dockerfile  Makefile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/deploy/: EC2_DOCKER.md  README.md  deploy_agent.py  deploy_gateway.py  deploy_ingest.py  deploy_migrate.py
backend/relay/: __init__.py  config.py  ids.py  logging.py
backend/relay/adapters/: __init__.py  embeddings_factory.py  embeddings_qwen.py  embeddings_tfy.py  livekit_tokens.py  llm_tfy.py  minimax_tts.py  moss.py  pgvector_retrieval.py  s3.py  slack.py  unsiloed.py
backend/relay/agent/: __init__.py  dispatch.py  trigger.py  worker.py
backend/relay/auth/: __init__.py  deps.py  jwt.py  rls.py
backend/relay/db/: __init__.py  base.py  models.py
backend/relay/gateway/: __init__.py  app.py  ws.py
backend/relay/ingestion/: __init__.py  chunking.py  pipeline.py  worker.py
backend/relay/interfaces/: __init__.py  embeddings.py  llm.py  parser.py  retrieval.py
backend/relay/memory/: __init__.py  moss_memory.py  service.py
backend/relay/migrations/: env.py
backend/relay/orchestrator/: __init__.py  intake.py  synth.py
backend/scripts/: seed_org_demo.py
backend/tests/: __init__.py  _rls_live_proof.py  conftest.py  test_contract.py  test_grounding.py  test_intake.py  test_latency.py  test_no_hallucination.py  test_telephony.py  test_tenant_isolation.py  test_ws.py
docs/: ADRs.md  (+12 more)
(+103 files in other folders)
