[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "0.1.0"
description = "Relay ambient AI co-pilot — backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyjwt[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "anthropic>=0.27.0",
    "livekit>=0.17.0",
    "livekit-agents>=0.8.0",
    "livekit-plugins-deepgram>=0.6.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["relay*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
